update benchmarks to test the new implementations